<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/touchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/leftBtnClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/leftBtnClick"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:background="@drawable/button_selector_with_top_border"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/left"
            android:textColor="@color/text"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnOpenKeyboard"
            app:layout_constraintEnd_toStartOf="@+id/rightBtnClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/touchView" />

        <Button
            android:id="@+id/rightBtnClick"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:background="@drawable/button_selector_with_top_border"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/right"
            android:textColor="@color/text"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnOpenKeyboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leftBtnClick"
            app:layout_constraintTop_toBottomOf="@+id/touchView" />

        <Button
            android:id="@+id/btnOpenKeyboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/open_keyboard"
            android:textColor="@color/text"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
