<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ipLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelIp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ip_text"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputTextIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/text"
                android:ems="10"
                android:inputType="text"
                android:text="255.255.255.255"
                android:textColor="@color/text"
                android:textCursorDrawable="@color/primary"
                app:layout_constraintTop_toBottomOf="@+id/labelIp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/portLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ipLayout">

            <TextView
                android:id="@+id/labelPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/port"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/text"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5"
                android:text="12345"
                android:textColor="@color/text"
                android:textCursorDrawable="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/screenWidthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/portLayout">

            <TextView
                android:id="@+id/labelScreenWidth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/screen_width"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputScreenWidth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/text"
                android:ems="10"
                android:inputType="number"
                android:text="1920"
                android:textColor="@color/text"
                android:textCursorDrawable="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/screenHeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/screenWidthLayout">

            <TextView
                android:id="@+id/LabelScreenHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/screen_height"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/InputScreenHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/text"
                android:ems="10"
                android:inputType="number"
                android:text="1080"
                android:textColor="@color/text"
                android:textCursorDrawable="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sensitivityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/screenHeightLayout">

            <TextView
                android:id="@+id/labelSensitivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sensibility"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputSensitivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/text"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                android:text="10"
                android:textColor="@color/text"
                android:textCursorDrawable="@color/primary" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_selector"
            android:text="@string/save"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensitivityLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
